syntax = "proto3";
package sample_a;

service SampleApiA {
  rpc ProcA (RequestA) returns (ResponseA);
}

message RequestA {
  string name = 1;
  int32 age = 2;
}

message ResponseA {
  string message = 1;
}