syntax = "proto3";
package sample_b;

service SampleApiB {
  rpc ProcB (RequestB) returns (ResponseB);
}

message RequestB {
  string name = 1;
  int32 age = 2;
}

message ResponseB {
  string message = 1;
}